<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\SoftDeletes;

class Proveedor extends Model
{
    use HasFactory, SoftDeletes;

    protected $table = 'proveedor';
    protected $primaryKey = 'ID_proveedor';
    public $timestamps = false;

    protected $fillable = [
        'nombre',
        'direccion',
        'telefono',
        'tipo_proveedor'
    ];

    public function productos()
    {
        return $this->hasMany(Producto::class, 'ID_proveedor');
    }
}